update labeling ui

--- a/nested_stacks/labeling_job/ui_template/tweet-classification.html
+++ b/nested_stacks/labeling_job/ui_template/tweet-classification.html
@@ -22,16 +22,16 @@
       <p>複数に合致する場合はより上に記載のある選択肢を選んで下さい。</p>
 
       <h2>INCIDENT</h2>
-      <p>障害です。AWS などのクラウド事業者に限らず、全てのサービスを含みます。</p>
+      <p>障害です。クラウド事業者に限らず、個別のサービスの障害を含みます。</p>
       <br>
       <h2>FEATURE_REQUEST</h2>
-      <p>機能要望です。具体的な内容が書かれている場合に選択して下さい。課題感のみの場合は、次の ISSUE を選んで下さい。</p>
+      <p>機能要望です。<u>具体的な内容</u>が書かれている場合に選択して下さい。課題感のみ、もしくは迷った場合は、次の ISSUE を選んで下さい。</p>
       <br>
       <h2>TECHNICAL_ISSUE</h2>
-      <p>課題です。クラウドや OSS に対する技術的な課題が書かれている場合に選択して下さい。<br>※ 個人のライフスタイル等に対する課題は含みません。</p>
+      <p>OSS 等に対する<u>技術的な課題</u>が書かれている場合に選択して下さい。<br>※ 個人のライフスタイル等に対する課題は含みません。</p>
       <br>
       <h2>OTHER_TECH</h2>
-      <p>上記に含まれない技術系の内容の場合に選択して下さい。<br>
+      <p>上記に含まれない<u>技術の関係する内容</u>の場合に選択して下さい。<br>
         <u>example</u><br>
         Tech系イベントの告知<br>
         エンジニア学習の日記
